[package]
name = "macro-manager"
version = "0.0.3"
edition = "2024"

[lib]
# https://github.com/rust-lang/rust/issues/43987
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "*"
libxdo-sys = "*"
clap = { version = "4.0", features = ["derive"] }
rustix = { version = "*", features = ["process"] }
xdg = "*"
procfs = "*"
notify = "*"
dbus = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
